--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,9 +12,8 @@ book:
   page-footer:
     left: |
       © 2024 <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>
-    right:
-      - icon: rss
-        href: index.xml
+    right: |
+      Built with <a href="https://quarto.org"> Quarto</a>
   chapters:
     - index.qmd
     - SI_Units.qmd
