--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,8 @@ project:
   output-dir: docs
 
 book:
-  title: "Applied Mechanics"
-  subtitle: "Workbook"
+  title: "Applied Mechanics Workbook"
+  subtitle: "Supplementary Exercises for In-Class Learning"
   author: "Serhat Beyenir"
   date: "2024-11-06"
   date-format: "MMMM D, YYYY"
