Added a new chapter and rendered using pandoc v.3.6

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ book:
     - index.qmd
     - SI_Units.qmd
     - scalar-and-vector-quantities.qmd
+    - kinematics.qmd
     - moment-of-a-force.qmd
     - review.qmd
     - references.qmd
